Print tree function

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ ConcurrentRBT_LockFree/.vs/ConcurrentRedBlackTree/v15/Server/sqlite3/storage.ide
 ConcurrentRBT_LockFree/.vs/ConcurrentRedBlackTree/v15/Server/sqlite3/db.lock
 ConcurrentRBT_LockFree/.vs/ConcurrentRedBlackTree/v15/.suo
 ConcurrentRBT_LockFree/.vs/ConcurrentRedBlackTree/v15/Server/sqlite3/storage.ide
+.DS_Store
